Adding more styles

--- a/html/home.html
+++ b/html/home.html
@@ -20,9 +20,10 @@
             </ul>
 
             <input class="search-bar" type="text" placeholder="Search movie">
+            <div class="search-container"></div>
 
             <div class="search-items">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-magnifying-glass search-icon"></i>
                 <i class="fa-solid fa-filter"></i>
             </div>
         </nav>
@@ -34,6 +35,7 @@
     </header>
 
     <main class="main">
+        <section class="movies-section"></section>
     </main>
 
     <footer class="footer">
