--- a/html/details.html
+++ b/html/details.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header-movie">
         <nav class="navbar">
-            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="./home.html"><i class="fa-solid fa-arrow-left"></i></a>
 
             <ul class="navbar-content">
                 <li>Home</li>
@@ -26,26 +26,33 @@
                 <i class="fa-solid fa-filter"></i>
             </div>
         </nav>
+        
+        <section class="hero-movie">
+            <iframe class="video-movie" width="560" height="315" src="https://www.youtube.com/embed/FWjiXOqRKhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
     </header>
 
-    <main>
-        <div class="video-movie"></div>
+    <main class="main">
         <div class="movie-cover"></div>
 
         <section class="movie-info">
             <h1 class="movie-info__title"></h1>
             <h2 class="movie-info__titleJ"></h2>
-            <p class="movie_info__rating"></p>
-            <p class="movie_info__date"></p>
-            <p class="movie_info__time"></p>
+            <div class="movie-data-container">
+                <p class="movie_info__date"></p>
+                <hr>
+                <p class="movie_info__time"></p>
+                <hr>
+                <p class="movie_info__rating"></p>
+            </div>
             <div class="movie-info__stars">&starf;&starf;&starf;&starf;&star;</div>
 
-            <h3>Synopsis</h3>
+            <h3 class="movie-synopsis__title">Synopsis</h3>
             <p class="movie-info__synopsis"></p>
 
-            <input type="checkbox" name="" id="">
-
-            <a href="#" class="movie-link" target="_blank">More</a>
+            <input type="checkbox" name="" id="movie__watched" class="movie__watched">
+            <label for="movie__watched" class="fa-regular fa-circle-check movie__watched-icon"></label>
+            <a href="#" class="movie-link" target="_blank">More info</a>
         </section>
     </main>
 
