--- a/html/home.html
+++ b/html/home.html
@@ -6,32 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ghibli Films Tracker | Home</title>
     <script src="https://kit.fontawesome.com/ce00375316.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../styles/normalize.css">
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/home.css">
 </head>
 <body>
     <header class="header">
         <nav class="navbar">
-            <i class="fa-solid fa-bars hamburguer"></i>
+            <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
 
-            <ul class="navbar-content">
-                <li>Home</li>
-                <li>Profile</li>
-            </ul>
-
-            <input class="search-bar" type="text" placeholder="Search movie">
-            <div class="search-container"></div>
-
-            <div class="search-items">
-                <i class="fa-solid fa-magnifying-glass search-icon"></i>
-                <i class="fa-solid fa-filter"></i>
+            <div class="nav-search">
+                <div class="input-box">
+                    <input class="search-bar" type="text" placeholder="Search...">
+                    <span class="search">
+                        <i class="fa-solid fa-magnifying-glass search-icon"></i>
+                    </span>
+                    <i class="fa-solid fa-xmark close-icon icon"></i>
+                </div>
+                <div class="filter-box">
+                    <i class="fa-solid fa-filter filter-icon icon"></i>
+                    <div class="filters-options">
+                        <div class="filters-sort">
+                            <label for="options">Sort by</label>
+                            <select name="options" id="options">
+                                <option value="duration">Duration</option>
+                                <option value="year">Year</option>
+                                <option value="audience">Audience Score</option>
+                            </select>
+                        </div>
+                        <div class="filters-order">
+                            <label for="order">Order</label>
+                            <select name="order" id="order">
+                                <option value="ascendant">Ascendant</option>
+                                <option value="descendant">Descendant</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <ul class="search-results"></ul>
         </nav>
 
-        <section class="hero">
-            <h1 class="hero-title">Studio Ghibli Films Tracker</h1>
-            <img class="hero-logo" src="" alt="">
-        </section>
+        <section class="hero"></section>
     </header>
 
     <main class="main">
@@ -39,8 +53,8 @@
     </main>
 
     <footer class="footer">
-        <p>Made with Love by Aranxa</p>
+        <p>Made with love by <a href="https://github.com/AranxaMo" class="github-link">Aranxa ♥️</a></p>
     </footer>
-    <script src="../scripts/main.js"></script>
+    <script src="../scripts/main.js" type="module"></script>
 </body>
 </html>
