--- a/html/details.html
+++ b/html/details.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ghibli Films Tracker | Movie</title>
     <script src="https://kit.fontawesome.com/ce00375316.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/details.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
         </nav>
         
         <section class="hero-movie">
-            <iframe class="video-movie" width="560" height="315" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="video-movie" width="560" height="315" title="YouTube video player" frameborder="0" crossorigin="anonymous" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </header>
     
