--- a/html/profile.html
+++ b/html/profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ghibli Films Tracker | Profile</title>
     <script src="https://kit.fontawesome.com/ce00375316.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/details.css">
 </head>
 <body>
