--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studio Ghibli Films Tracker | Login</title>
+    <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/login.css">
     <script src="https://kit.fontawesome.com/ce00375316.js" crossorigin="anonymous"></script>
 </head>
