Adding register, login and main page styles

--- a/html/details.html
+++ b/html/details.html
@@ -64,7 +64,7 @@
     </main>
 
     <footer class="footer">
-        
+        <p>Made with love by <a href="https://github.com/AranxaMo" class="github-link">Aranxa Martínez</a> ♥️</p>
     </footer>
 
     <script src="../scripts/details.js"></script>
