--- a/html/home.html
+++ b/html/home.html
@@ -56,6 +56,6 @@
     <footer class="footer">
         <p>Made with love by <a href="https://github.com/AranxaMo" class="github-link">Aranxa ♥️</a></p>
     </footer>
-    <script src="../scripts/main.js" type="module"></script>
+    <script src="../scripts/home.js" type="module"></script>
 </body>
 </html>
