--- a/html/profile.html
+++ b/html/profile.html
@@ -35,6 +35,9 @@
         </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <p>Made with love by <a href="https://github.com/AranxaMo" class="github-link">Aranxa</a> ♥️</p>
+    </footer>
+    <!-- <script src="../scripts/firebase.js" type="module"></script> -->
 </body>
 </html>
