--- a/html/register.html
+++ b/html/register.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <img src="../Design/img/studio-ghibli-logo.svg" alt="Studi Ghibli Logo" class="ghibli-logo">
+            <img src="../assets/img/studio-ghibli-logo.svg" alt="Studi Ghibli Logo" class="ghibli-logo">
         </div>
     </header>
 
@@ -36,8 +36,12 @@
             </div>
             <button type="submit" class="btn-register">Register</button>
         </div>
+        <div class="login-paragraph">
+            <p>Already have an account? <a href="./login.html">Sign in</a></p>
+        </div>
     </main>
-    <footer class="footer">
-    </footer>
+    <footer class="footer"></footer>
+
+    <script src="../scripts/register.js" type="module"></script>
 </body>
 </html>
