--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <img src="../Design/img/studio-ghibli-logo.svg" alt="Studi Ghibli Logo" class="ghibli-logo">
+            <img src="../assets/img/studio-ghibli-logo.svg" alt="Studi Ghibli Logo" class="ghibli-logo">
         </div>
     </header>
 
@@ -33,7 +33,6 @@
                 </div>
             </div>
     </main>
-    <footer class="footer">
-    </footer>
+    <footer class="footer"></footer>
 </body>
 </html>
