--- a/html/profile.html
+++ b/html/profile.html
@@ -7,18 +7,24 @@
     <title>Ghibli Films Tracker | Profile</title>
     <script src="https://kit.fontawesome.com/ce00375316.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/normalize.css">
-    <link rel="stylesheet" href="../styles/details.css">
+    <link rel="stylesheet" href="../styles/profile.css">
 </head>
 <body>
     <header class="header-movie">
         <nav class="navbar">
-            <a href="./home.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <div class="icon-container">
+                <a href="./home.html"><i class="fa-solid fa-arrow-left"></i></a>
+            </div>
+
+            <div class="logout-container">
+                <a href="../index.html"><i class="fa-solid fa-arrow-right-from-bracket logout-icon"></i></a>
+            </div>
         </nav>
     </header>
     <main class="main-profile">
         <section class="profile-container">
             <div class="profile-img">
-                <img  class="profile-picture" src="../Design/img/profile-img.png" alt="">
+                <img  class="profile-picture" src="../assets/img/profile-img.png" alt="">
             </div>
             <div class="profile-info">
                 <h1>Username</h1>
@@ -38,6 +44,6 @@
     <footer class="footer">
         <p>Made with love by <a href="https://github.com/AranxaMo" class="github-link">Aranxa</a> ♥️</p>
     </footer>
-    <!-- <script src="../scripts/firebase.js" type="module"></script> -->
+    <script src="../scripts/profile.js" type="module"></script>
 </body>
 </html>
