Responsive design on home, profile, login, register and details pages

--- a/html/details.html
+++ b/html/details.html
@@ -27,15 +27,13 @@
                 <h1 class="movie-info__title"></h1>
                 <p class="movie-info__titleJ"></p>
                 <div class="movie-data-container">
-                    <p class="movie_info__date"></p>
+                    <p class="movie_info__date p-info"></p>
                     <hr>
-                    <p class="movie_info__time"></p>
+                    <p class="movie_info__time p-info"></p>
                     <hr>
-                    <p class="movie_info__rating"></p>
+                    <p class="movie_info__rating p-info"></p>
                 </div>
             </section>
-
-            
         </section>
         <section class="movie-info-icons">
             <div class="movie-info__stars">
