--- a/html/profile.html
+++ b/html/profile.html
@@ -21,28 +21,30 @@
             </div>
         </nav>
     </header>
-    <main class="main-profile">
-        <section class="profile-container">
+    <main class="main">
+        <div class="card-container">
             <div class="profile-img">
                 <img  class="profile-picture" src="../assets/img/profile-img.png" alt="">
             </div>
-            <div class="profile-info">
-                <h1>Username</h1>
-                <p>Scores</p>
-                <p>Passwords</p>
-            </div>
-        </section>
-        <section class="progress-user">
-            <h2>Ghibli movies watched</h2>
-            <div class="progress-container">
-                <div class="progress-bar"></div>
-            </div>
-            <p class="progress-number">15/24</p>
-        </section>
+            <section class="profile-container">
+                <div class="profile-info">
+                    <h1>Username</h1>
+                    <p>Scores</p>
+                    <p>Passwords</p>
+                </div>
+                <div class="progress-user">
+                    <h2>Ghibli movies watched</h2>
+                    <div class="progress-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <p class="progress-number">15/24</p>
+                </div>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
-        <p>Made with love by <a href="https://github.com/AranxaMo" class="github-link">Aranxa</a> ♥️</p>
+        <p>Made with love by <a href="https://github.com/AranxaMo" class="github-link">Aranxa Martínez</a> ♥️</p>
     </footer>
     <script src="../scripts/profile.js" type="module"></script>
 </body>
