--- a/html/register.html
+++ b/html/register.html
@@ -9,36 +9,38 @@
     <link rel="stylesheet" href="../styles/register.css">
 </head>
 <body>
-    <header class="header">
-        <div class="logo-container">
-            <img src="../assets/img/studio-ghibli-logo.svg" alt="Studi Ghibli Logo" class="ghibli-logo">
-        </div>
-    </header>
-
     <main class="main">
-        <div class="register-container">
-            <h1>Register</h1>
-            <div class="register__input">
-                <label for="email-register">Email</label>
-                <input class="input-field" type="email" name="email" id="email-register" placeholder="example@mail.com" required>
+        <section class="banner-container">
+            <img class="side-banner" src="../assets/img/sideimg-register.jpg" alt="">
+        </section>
+        <section class="card-container">
+            <div class="logo-container">
+                <img src="../assets/img/studio-ghibli-logo.svg" alt="Studi Ghibli Logo" class="ghibli-logo">
             </div>
-            <div class="register__input">
-                <label for="username">Username</label>
-                <input class="input-field" type="text" name="username" id="username" placeholder="Username" required>
+            <div class="register-container">
+                <h1>Register</h1>
+                <div class="register__input">
+                    <label for="email-register">Email</label>
+                    <input class="input-field" type="email" name="email" id="email-register" placeholder="example@mail.com" required>
+                </div>
+                <div class="register__input">
+                    <label for="username">Username</label>
+                    <input class="input-field" type="text" name="username" id="username" placeholder="Username" required>
+                </div>
+                <div class="register__input">
+                    <label for="password">Password</label>
+                    <input class="input-field" type="password" name="password" id="password" placeholder="Password" required>
+                </div>
+                <div class="register__input">
+                    <label for="password.confirm">Confirm password</label>
+                    <input class="input-field" type="password" name="password2" id="password-confirm" placeholder="Repeat password" required>
+                </div>
+                <button type="submit" class="btn-register">Register</button>
             </div>
-            <div class="register__input">
-                <label for="password">Password</label>
-                <input class="input-field" type="password" name="password" id="password" placeholder="Password" required>
+            <div class="login-paragraph">
+                <p>Already have an account? <a href="./login.html">Sign in</a></p>
             </div>
-            <div class="register__input">
-                <label for="password.confirm">Confirm password</label>
-                <input class="input-field" type="password" name="password2" id="password-confirm" placeholder="Repeat password" required>
-            </div>
-            <button type="submit" class="btn-register">Register</button>
-        </div>
-        <div class="login-paragraph">
-            <p>Already have an account? <a href="./login.html">Sign in</a></p>
-        </div>
+        </section>
     </main>
     <footer class="footer"></footer>
 
