Responsive design of home page

--- a/html/home.html
+++ b/html/home.html
@@ -21,6 +21,7 @@
                         <i class="fa-solid fa-magnifying-glass search-icon"></i>
                     </span>
                     <i class="fa-solid fa-xmark close-icon icon"></i>
+                    <ul class="search-results"></ul>
                 </div>
                 <div class="filter-box">
                     <i class="fa-solid fa-filter filter-icon icon"></i>
@@ -43,10 +44,7 @@
                     </div>
                 </div>
             </div>
-            <ul class="search-results"></ul>
         </nav>
-
-        <section class="hero"></section>
     </header>
 
     <main class="main">
@@ -54,7 +52,7 @@
     </main>
 
     <footer class="footer">
-        <p>Made with love by <a href="https://github.com/AranxaMo" class="github-link">Aranxa ♥️</a></p>
+        <p>Made with love by <a href="https://github.com/AranxaMo" class="github-link">Aranxa Martínez</a> ♥️</p>
     </footer>
     <script src="../scripts/home.js" type="module"></script>
 </body>
