--- a/html/profile.html
+++ b/html/profile.html
@@ -28,9 +28,9 @@
             </div>
             <section class="profile-container">
                 <div class="profile-info">
-                    <h1>Username</h1>
-                    <p>Scores</p>
-                    <p>Passwords</p>
+                    <h1>Hello!</h1>
+                    <h2 class="username">Username</h2>
+                    <p>Settings</p>
                 </div>
                 <div class="progress-user">
                     <h2>Ghibli movies watched</h2>
@@ -38,6 +38,12 @@
                         <div class="progress-bar"></div>
                     </div>
                     <p class="progress-number">15/24</p>
+                </div>
+                <div class="quote-container">
+                    <p class="quote__paragraph">
+                        "I believe that fantasy in the meaning of imagination is very important. We shouldn't stick too close to everyday reality but give room to the reality of the heart, of the mind, and of the imagination."
+                    </p>
+                    <p class="quote__name">-Hayao Miyazaki</p>
                 </div>
             </section>
         </div>
