Logout added and set doc to firebase

--- a/html/details.html
+++ b/html/details.html
@@ -17,7 +17,7 @@
         </nav>
         
         <section class="hero-movie">
-            <iframe class="video-movie" width="560" height="315" title="YouTube video player" frameborder="0" crossorigin="anonymous" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="video-movie" width="560" height="315" title="YouTube video player" frameborder="0" crossorigin="anonymous" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
         </section>
     </header>
     
@@ -37,15 +37,15 @@
         </section>
         <section class="movie-info-icons">
             <div class="movie-info__stars">
-                <input type="radio" name="rate" id="rate-5">
+                <input type="radio" name="rate" id="rate-5" value="Five Stars">
                 <label for="rate-5" class="fa-solid fa-star"></label>
-                <input type="radio" name="rate" id="rate-4">
+                <input type="radio" name="rate" id="rate-4" value="Four Stars">
                 <label for="rate-4" class="fa-solid fa-star"></label>
-                <input type="radio" name="rate" id="rate-3">
+                <input type="radio" name="rate" id="rate-3" value="Three Stars">
                 <label for="rate-3" class="fa-solid fa-star"></label>
-                <input type="radio" name="rate" id="rate-2">
+                <input type="radio" name="rate" id="rate-2" value="Two Stars">
                 <label for="rate-2" class="fa-solid fa-star"></label>
-                <input type="radio" name="rate" id="rate-1">
+                <input type="radio" name="rate" id="rate-1" value="One Star">
                 <label for="rate-1" class="fa-solid fa-star"></label>
             </div>
             <div class="movie-info__check">
@@ -65,6 +65,6 @@
         <p>Made with love by <a href="https://github.com/AranxaMo" class="github-link">Aranxa Martínez</a> ♥️</p>
     </footer>
 
-    <script src="../scripts/details.js"></script>
+    <script src="../scripts/details.js" type="module"></script>
 </body>
 </html>
