Fixing login redirect

--- a/html/profile.html
+++ b/html/profile.html
@@ -24,13 +24,13 @@
     <main class="main">
         <div class="card-container">
             <div class="profile-img">
-                <img  class="profile-picture" src="../assets/img/profile-img.png" alt="">
+                <img class="profile-picture" src="../assets/img/profile-img.png" alt="">
             </div>
             <section class="profile-container">
                 <div class="profile-info">
                     <h1>Hello!</h1>
                     <h2 class="username">Username</h2>
-                    <p>Settings</p>
+                    <!-- <p>Settings</p> -->
                 </div>
                 <div class="progress-user">
                     <h2>Ghibli movies watched</h2>
